--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,1 +1,19 @@
-body{background-color:#00BCD4}h1{text-align:center}
+section.contain{
+	height: 100vh;
+}
+.carousel-height{
+	min-height: 100vh;
+}
+.img-height{
+    height: 200px;
+    display: inline-block;
+    width: 70%;
+    margin: 20% 0 0 0;
+}
+.btn-yellow{
+	background-color: #fbd43b;
+	width: 80%;
+}
+.padd__sides-10{
+	padding: 0 10px;
+}
