index & views moved to public

--- a/public/views/validate.html
+++ b/public/views/validate.html
@@ -6,13 +6,13 @@
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	  <title>Yape Sprint 6</title>
 	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	  <link type="text/css" rel="stylesheet" href="../materialize/dist/css/materialize.min.css"  media="screen,projection"/>
-	  <link rel="stylesheet" type="text/css" href="../public/assets/css/main.css">
+	  <link type="text/css" rel="stylesheet" href="./../node/materialize-css/dist/css/materialize.min.css"  media="screen,projection"/>
+	  <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 	</head>
 	<body>
 	  <section class="contain">
 		<div class="row marginTop-20">
-			<img class="responsive-img col s4 offset-s4" src="../public/img/icons/phone.png">
+			<img class="responsive-img col s4 offset-s4" src="../img/icons/phone.png">
 		</div>
 		<div class="row">
 			<h5 class="center"><strong>Para comenzar validemos tu número</strong></h5>
@@ -21,7 +21,7 @@
 	    <form>
 		    <div class="input-field row">
 		      <div class="">
-				<img class="responsive-img col s4 " src="../public/img/icons/phoneandnumber.png">
+				<img class="responsive-img col s4 " src="../img/icons/phoneandnumber.png">
 			  </div>
 	          <input id="icon_telephone" type="tel" class="validate">
 	        </div>
@@ -31,8 +31,8 @@
 		    </p>
 	    </form>
 	  </section>
-	  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js">  </script>
- 	  <script src="../materialize/dist/js/materialize.min.js"></script>
- 	  <script type="text/javascript" src="../public/assets/js/validate.js"></script>
+	  <script type="text/javascript" src="./../node/jquery/dist/jquery.min.js">  </script>
+ 	  <script src="./../node/materialize-css/dist/js/materialize.min.js"></script>
+ 	  <script type="text/javascript" src="../assets/js/validate.js"></script>
 	</body>
 </html>
