--- a/public/views/validate.html
+++ b/public/views/validate.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title></title>
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	  <title>Yape Sprint 6</title>
@@ -18,21 +17,28 @@
 			<h5 class="center"><strong>Para comenzar validemos tu número</strong></h5>
 		    <p class="center gray-text">Recibirás un SMS con un código de validación.</p>
 	    </div>
-	    <form>
+	    <form id="formPhone">
 		    <div class="input-field row">
-		      <div class="">
-				<img class="responsive-img col s4 " src="../img/icons/phoneandnumber.png">
-			  </div>
-	          <input id="icon_telephone" type="tel" class="validate">
+			  <div class="input-field col s10 offset-s1">
+			    <div class="gray-text"> 
+	            	<i class="material-icons prefix">phonelink_ring</i>	            	
+	            	<input id="phoneNumber" type="tel" class="center validate">
+	            	<label for="phoneNumber">(+51)</label>
+	            </div>	            
+	          </div>
 	        </div>
-	    	<p class="center col s8">
-		      <input type="checkbox" id="test5" />
-		      <label for="test5">Acepto los <a href="#">Términos y Condiciones</a></label>
-		    </p>
+	    	<div class="center col s8">
+		      <input id="term-conditions" type="checkbox" class="filled-in validate" />
+		      <label for="term-conditions">Acepto los <a href="#">Términos y Condiciones</a></label>
+		    </div>
+		    <div class="row center marginTop-20">
+		      <button id="btn-next" class="btn waves-effect waves-light btn-yellow" type="submit" name="action" disabled>CONTINUAR</button>
+		    </div>
 	    </form>
+
 	  </section>
 	  <script type="text/javascript" src="./../node/jquery/dist/jquery.min.js">  </script>
  	  <script src="./../node/materialize-css/dist/js/materialize.min.js"></script>
- 	  <script type="text/javascript" src="../assets/js/validate.js"></script>
+ 	  <script type="text/javascript" src="../assets/js/index.js"></script>
 	</body>
 </html>
