--- a/public/views/code.html
+++ b/public/views/code.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 	  <section class="contain">
-		<div class="row marginTop-20">
+		<div class="row marginTop-15">
 			<img class="responsive-img col s4 offset-s4" src="../img/icons/message.png">
 		</div>
 		<div class="row">
@@ -18,8 +18,8 @@
 		    <p class="center gray-text">Enviamos un SMS con el código de validación al número <span id="phoneRegistered"></span>.</p>
 	    </div>
 	    <form id="formCode">		    
-	        <div class="input-field row">
-			  <div class="input-field col s10 offset-s1">
+	        <div class="input-field">
+			  <div class="input-field">
 			    <div class="gray-text"> 
 	            	<i class="material-icons prefix">lock_outline</i>	            	
 	            	<input id="code" type="tel" class="center validate">
@@ -28,7 +28,7 @@
 	          </div>
 	        </div>
 	    	<div class="row">
-		      <p class="center gray-text col s8 offset-s2">reintentar en
+		      <p class="center gray-text col s8 offset-s2">Reintentar en
 		        <i class="material-icons">query_builder</i>21 
 		      </p>
 		    </div>
