--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,4 +1,4 @@
-section.contain{
+body{
 	height: 100vh;
 }
 .carousel-height{
@@ -31,6 +31,6 @@ section.contain{
 .carousel .indicators {
     bottom: 17%;
 }
-.marginTop-20{
-	margin-top: 20%;
+.marginTop-15{
+	margin-top: 15%;
 }
