--- a/public/views/code.html
+++ b/public/views/code.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 	  <section class="contain">
+	  	<a href="validate.html"><i class="material-icons md-48 gray-dark">keyboard_arrow_left</i></a>
 		<div class="row marginTop-15">
 			<img class="responsive-img col s4 offset-s4" src="../img/icons/message.png">
 		</div>
