--- a/public/views/register.html
+++ b/public/views/register.html
@@ -21,7 +21,7 @@
 	        <div class="input-field">
 			  <div class="input-field">
 			    <div class="gray-text"> 
-	            	<i class="material-icons prefix">lock_outline</i>	            	
+	            	<i class="material-icons prefix">child_care</i>	            	
 	            	<input id="userName" type="tel" class="center validate" placeholder="Nombre">   	
 	            </div>	            
 	          </div>
@@ -29,7 +29,7 @@
 	        <div class="input-field">
 			  <div class="input-field">
 			    <div class="gray-text"> 
-	            	<i class="material-icons prefix">lock_outline</i>	            	
+	            	<i class="material-icons prefix">mail_outline</i>	            	
 	            	<input id="userMail" type="tel" class="center validate" placeholder="correo@ejemplo.com">
 	            </div>	            
 	          </div>
