--- a/public/views/code.html
+++ b/public/views/code.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="row">
 			<h5 class="center"><strong>Ahora ingresa tu código</strong></h5>
-		    <p class="center gray-text">Enviamos un SMS con el código de validación al número <span id="phoneRegistered"></span>.</p>
+		    <p class="center gray-text">Enviamos un SMS con el código de validación al número <span id="phoneRegistered"></span></p>
 	    </div>
 	    <form id="formCode">		    
 	        <div class="input-field">
@@ -30,7 +30,7 @@
 	        </div>
 	    	<div class="row">
 		      <p class="center gray-text col s8 offset-s2">Reintentar en
-		        <i class="material-icons">query_builder</i>21 
+		        <i class="material-icons">query_builder</i><span id="countDown"></span> 
 		      </p>
 		    </div>
 	    </form>
@@ -39,5 +39,6 @@
 	  <script type="text/javascript" src="./../node/jquery/dist/jquery.min.js">  </script>
  	  <script src="./../node/materialize-css/dist/js/materialize.min.js"></script>
  	  <script type="text/javascript" src="../assets/js/index.js"></script>
+ 	  <script type="text/javascript" src="../assets/js/validate.js"></script>
 	</body>
 </html>
