3s transition from page5 to page6

--- a/public/views/card.html
+++ b/public/views/card.html
@@ -9,7 +9,7 @@
 	  <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
 	</head>
 	<body>
-	  <section class="contain btn-yellow">
+	  <section class="contain">
 		<div class="row paddTop-50">
 			<img class="responsive-img col s4 offset-s4" src="../img/icons/check.png">
 		</div>
@@ -21,6 +21,6 @@
 	  </section>
 	  <script type="text/javascript" src="./../node/jquery/dist/jquery.min.js">  </script>
  	  <script src="./../node/materialize-css/dist/js/materialize.min.js"></script>
- 	  <script type="text/javascript" src="../assets/js/success.js"></script>
+ 	  <script type="text/javascript" src="../assets/js/index.js"></script>
 	</body>
 </html>
