--- a/public/views/register.html
+++ b/public/views/register.html
@@ -22,7 +22,7 @@
 			  <div class="input-field">
 			    <div class="gray-text"> 
 	            	<i class="material-icons prefix">child_care</i>	            	
-	            	<input id="userName" type="tel" class="center validate" placeholder="Nombre">   	
+	            	<input id="userName" type="text" class="center validate" placeholder="Nombre" required="true">   	
 	            </div>	            
 	          </div>
 	        </div>
@@ -30,15 +30,15 @@
 			  <div class="input-field">
 			    <div class="gray-text"> 
 	            	<i class="material-icons prefix">mail_outline</i>	            	
-	            	<input id="userMail" type="tel" class="center validate" placeholder="correo@ejemplo.com">
+	            	<input id="userMail" type="email" class="center validate" placeholder="correo@ejemplo.com" required="true">
 	            </div>	            
 	          </div>
 	        </div>
 	        <div class="input-field">
 			  <div class="input-field">
 			    <div class="gray-text"> 
-	            	<i class="material-icons prefix">lock_outline</i>	            	
-	            	<input id="userPass" type="tel" class="center validate" placeholder="Ingresa tu clave de 6 dígitos">
+	            	<i class="material-icons prefix">lock_outline</i>	
+	            	<input id="userPass" type="password" class="center validate" placeholder="Ingresa tu clave de 6 dígitos" required="true">
 	            </div>	            
 	          </div>
 	        </div>
@@ -47,7 +47,7 @@
 		      </p>
 		    </div>
 		    <div class="row center marginTop-15">
-		      <button id="btn-next" class="btn waves-effect waves-light btn-yellow" type="submit" name="action" disabled>CONTINUAR</button>
+		      <button id="btn-next2" class="btn waves-effect waves-light btn-yellow" type="submit" name="action" disabled>CONTINUAR</button>
 		    </div>
 	    </form>
 
