input type number

--- a/public/views/code.html
+++ b/public/views/code.html
@@ -23,7 +23,7 @@
 			  <div class="input-field">
 			    <div class="gray-text"> 
 	            	<i class="material-icons prefix">lock_outline</i>	            	
-	            	<input id="code" type="tel" class="center validate">
+	            	<input id="code" type="number" class="center validate">
 	            	<label for="code"> - - - - </label>
 	            </div>	            
 	          </div>
