--- a/public/views/validate.html
+++ b/public/views/validate.html
@@ -22,7 +22,7 @@
 			  <div class="input-field col s10 offset-s1">
 			    <div class="gray-text"> 
 	            	<i class="material-icons prefix">phonelink_ring</i>	            	
-	            	<input id="phoneNumber" type="tel" class="center validate">
+	            	<input id="phoneNumber" type="number" class="center validate">
 	            	<label for="phoneNumber">(+51)</label>
 	            </div>	            
 	          </div>
