user Registration done

--- a/public/views/register.html
+++ b/public/views/register.html
@@ -17,7 +17,7 @@
 			<h5 class="center"><strong>Crea tu usuario Yape</strong></h5>
 		    <p class="center gray-text">Ingresa un nombre, email y clave de usuario.<span id="phoneRegistered"></span>.</p>
 	    </div>
-	    <form id="formCode">		    
+	    <form id="formUser">		    
 	        <div class="input-field">
 			  <div class="input-field">
 			    <div class="gray-text"> 
