--- a/public/views/code.html
+++ b/public/views/code.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="row">
 			<h5 class="center"><strong>Ahora ingresa tu código</strong></h5>
-		    <p class="center gray-text">Enviamos un SMS con el código de validación al número <span id="phoneRegistered"></span></p>
+		    <p class="center gray-text">Enviamos un SMS con el código de validación al número <strong id="phoneRegistered" class="gray-dark"></strong></p>
 	    </div>
 	    <form id="formCode">		    
 	        <div class="input-field">
