--- a/public/views/nip.html
+++ b/public/views/nip.html
@@ -31,7 +31,7 @@
 	          </div>
 	        </div>		    
             <div class="row center marginTop-15">
-		      <button id="btn-next" class="btn waves-effect waves-light btn-yellow" type="submit" name="action" disabled>REGISTRAR</button>
+		      <button id="btn-next4" class="btn waves-effect waves-light btn-yellow" type="submit" name="action" disabled>REGISTRAR</button>
 		    </div>
 	    </form>
 
