--- a/public/views/register.html
+++ b/public/views/register.html
@@ -17,33 +17,33 @@
 			<h5 class="center"><strong>Crea tu usuario Yape</strong></h5>
 		    <p class="center gray-text">Ingresa un nombre, email y clave de usuario.<span id="phoneRegistered"></span>.</p>
 	    </div>
-	    <form id="formUser">		    
+	    <form id="formUser">
 	        <div class="input-field">
 			  <div class="input-field">
-			    <div class="gray-text"> 
-	            	<i class="material-icons prefix">child_care</i>	            	
-	            	<input id="userName" type="text" class="center validate" placeholder="Nombre" required="true">   	
-	            </div>	            
+			    <div class="gray-text">
+	            	<i class="material-icons prefix">child_care</i>
+	            	<input id="userName" type="text" class="center validate" placeholder="Nombre" required="true">
+	            </div>
 	          </div>
 	        </div>
 	        <div class="input-field">
 			  <div class="input-field">
-			    <div class="gray-text"> 
-	            	<i class="material-icons prefix">mail_outline</i>	            	
-	            	<input id="userMail" type="email" class="center validate" placeholder="correo@ejemplo.com" required="true">
-	            </div>	            
+			    <div class="gray-text">
+	            	<i class="material-icons prefix">mail_outline</i>
+	            	<input id="userMail" type="email" class="center validate" data-error="wrong" data-success="right" placeholder="correo@ejemplo.com" required="true">
+	            </div>
 	          </div>
 	        </div>
 	        <div class="input-field">
 			  <div class="input-field">
-			    <div class="gray-text"> 
-	            	<i class="material-icons prefix">lock_outline</i>	
+			    <div class="gray-text">
+	            	<i class="material-icons prefix">lock_outline</i>
 	            	<input id="userPass" type="password" class="center validate" placeholder="Ingresa tu clave de 6 dígitos" required="true">
-	            </div>	            
+	            </div>
 	          </div>
 	        </div>
 	    	<div class="row">
-		      <p class="center gray-text col s10 offset-s1">Cuida esta clave como oro, es tu acceso a Yape 
+		      <p class="center gray-text col s10 offset-s1">Cuida esta clave como oro, es tu acceso a Yape
 		      </p>
 		    </div>
 		    <div class="row center marginTop-15">
