--- a/public/views/nip.html
+++ b/public/views/nip.html
@@ -13,7 +13,7 @@
 		<div>
 			<a href="card.html"><i class="material-icons md-48 gray-dark">keyboard_arrow_left</i></a>
 			<a href="#"><i class="material-icons right">help_outline</i></a>
-		</div>	  	
+		</div>
 		<div class="row marginTop-15">
 			<img class="responsive-img col s4 offset-s4" src="../img/icons/bcp-logo.png">
 		</div>
@@ -21,15 +21,15 @@
 			<h5 class="center"><strong>RIngresa la clave de tu tarjeta</strong></h5>
 		    <p class="center gray-text">Tarjeta <strong id="cardRegistered" class="gray-dark"></strong></p>
 	    </div>
-	    <form id="formNip">		    
+	    <form id="formNip">
 	        <div class="input-field row">
 			  <div class="input-field">
-			    <div class="gray-text col s10 offset-s1"> 
-	            	<i class="material-icons prefix">lock_outline</i>            	
+			    <div class="gray-text col s10 offset-s1">
+	            	<i class="material-icons prefix">lock_outline</i>
 	            	<input id="cardNip" type="number" class="center validate">
-	            </div>	            
+	            </div>
 	          </div>
-	        </div>		    
+	        </div>
             <div class="row center marginTop-15">
 		      <button id="btn-next4" class="btn waves-effect waves-light btn-yellow" type="submit" name="action" disabled>REGISTRAR</button>
 		    </div>
@@ -39,5 +39,6 @@
 	  <script type="text/javascript" src="./../node/jquery/dist/jquery.min.js">  </script>
  	  <script src="./../node/materialize-css/dist/js/materialize.min.js"></script>
  	  <script type="text/javascript" src="../assets/js/index.js"></script>
+		<script type="text/javascript" src="../assets/js/card.js"></script>
 	</body>
 </html>
